feat(gui): add configurable titles menu and split menu config